--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "youtube-node",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "private": true,
   "scripts": {
     "start": "nodemon --exec babel-node ./bin/www",
@@ -18,10 +18,12 @@
     "express": "~4.16.1",
     "express-validator": "^6.14.0",
     "form-data": "^4.0.0",
+    "googleapis": "^123.0.0",
     "http-errors": "~1.6.3",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.13.13",
     "morgan": "~1.9.1",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.15",
     "pug": "2.0.0-beta11"
   },
